_sass/yat/_layout.scss
/* ... */
.post-comments {
  padding-top: 25px;
}


/**
 * Posts misc
 */
.post-nav {
  display: flex;
  justify-content: space-between;
  margin: 72px 0 59px;
  padding: 31px 0 0;

  a {
    @include relative-font-size(1.125);
    line-height: 15px;
    color: #666;
    max-width: 50%;
  }

  .previous:before {
    content: ' ';
    border: solid #787878;
    border-width: 0 2px 2px 0;
    display: inline-block;
    padding: 4px;
    margin-right: 8px;
    transform: rotate(135deg);
    -webkit-transform: rotate(135deg);
  }

  .next:after {
    content: ' ';
    border: solid #787878;
    border-width: 0 2px 2px 0;
    display: inline-block;
    padding: 4px;
    margin-left: 8px;
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
  }
}


/**
 * Archives page
 */
.page-archives {
  .page-archives-list {
    margin-left: 0;
    list-style: none;
  }

  .archives-time {
    @include relative-font-size(1.5);

    &:not(:first-child) {
      margin-top: 18px;
    }
    margin-bottom: 8px;
  }

  .post-meta {
    font-size: $small-font-size;
    color: $grey-color;
  }
}


/**
 * Page banner
 */
.page-banner {
  display: block;
  position: relative;
  height: $banner-height;
  background-color: $banner-background;
  transition: height 0.2s;

  .page-banner-img {
    position: absolute;
    width: 100%;
    height: 100%;
    overflow: hidden;

    & > *:first-child {
      @include center-image;
      transition: 0.1s all ease-in-out;
    }

    & > video {
      width: 100vw;
      object-fit: cover;
    }

    & > img.img-placeholder {
      display: none;
    }
  }

  .wrapper {
    height: 100%;
  }

  .page-banner-inner {
    @include vertical-center(relative);

    color: $banner-text-color;
    padding: 10px 5px;
    text-shadow: 1px 1px 2px #33333355;

    & > *:first-child {
      margin: 0;

      > :nth-child(1) {
        @include relative-font-size(3.9);
        letter-spacing: -1px;
        margin-bottom: 0.1em;
        font-weight: normal;
        transition: 0.2s all;

        @include media-query($on-palm) {
          @include relative-font-size(1.975);
        }
      }

      > :nth-child(2) {
        font-weight: lighter;
        margin-bottom: 0.8em;
        transition: 0.2s all;

        @include media-query($on-palm) {
          @include relative-font-size(1.175);
        }
      }

      > :last-child {
        margin-bottom: 0;
      }
    }

    .post-subtitle {
      @include relative-font-size(1.525);
      color: #ffffffcc;
      padding-right: 280px;

      @include media-query($on-palm) {
        padding-right: 0;
      }
    }

    .post-meta {
      color: #ffffffcc;
    }

    .left-vsplit:before {
      background: #e3e3e388;
    }

    .post-tags {
      color: #999;
      padding-right: 280px;

      @include media-query($on-palm) {
        padding-right: 0;
      }

      .post-tag {
        @include relative-font-size(1.125);
        display: inline-block;
        text-decoration: none;
        margin: 9px 12px 0 0;
        color: #fff;

        &:hover {
          text-decoration: underline;
        }
      }
    }
  }

  @include media-query($on-palm) {
    height: $banner-height / 1.5;
  }
}


/**
 * Layout and sidebar
 */
.framework {
    @extend %flex;

  .main {
    @extend %flex-1;
  }

  .sidebar {
    padding-left: 8px;
    transition: top 0.2s, display 0.2s;

    @include flex-sticky($header-height + 20px);

    @include media-query($on-laptop) {
      display: none;
    }

  }
}


/**
 * Segments page
 */
.page-segments {
  .page-segments-list {
    margin-left: 0;
    list-style: none;
  }

  .segment-name {
    font-weight: $base-font-weight * 1.5;
    margin-bottom: 8px;
    position: relative;

    @include relative-font-size(1.6);

    &:not(:first-child) {
      margin-top: 28px;
    }

    &:hover:before {
      content: '#';
      left: -1em;
      position: absolute;
    }
  }

  .post-meta {
    font-size: $small-font-size;
    color: $grey-color;
  }

  li a {
    &.post-link {
      margin-left: 5px;
    }

    color: #303030;

    &:hover {
      color: #000;
    }

    &:after {
      content: 'NEW';
      position: absolute;
      margin-left: 8px;
      margin-top: 3px;
      padding: 0px 3px;
      background-color: $brand-color;
      color: #fff;
      font-size: 10px;
      font-weight: 600;
      border-radius: 2px;
    }

    &:visited:after {
      background-color: #fff;
    }
  }
}

.left-vsplit:before {
  content: "";
  display: inline-block;
  width: 1px;
  height: 10px;
  margin: 0 10px;
  background-color: #e3e3e3e3;
  vertical-align: baseline;
}

